# NodeMapper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/annotator/: __init__.py  __main__.py  app.py  constants.py  store.py
src/annotator/resources/: __init__.py  map.html
src/annotator/utils/: exif.py
src/annotator/widgets/: __init__.py  map_widget.py  photo_panel.py
src/annotator/windows/: __init__.py  main_window.py
src/graph/: __init__.py  university_graph.py
src/viz/: __init__.py  urwalking_viz.py
