[project]
name = "location-annotation-tool"
version = "0.1.0"
description = "URWalking – Desktop tool for annotating photos with navigation graph nodes"
requires-python = ">=3.10"
dependencies = [
    "PyQt5",
    "PyQtWebEngine",
    "pandas",
    "Pillow",
    "networkx",
    "matplotlib",
    "folium",
    "plotly",
    "pydeck",
    "numpy",
]

[project.scripts]
annotator = "annotator.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/annotator", "src/graph", "src/viz"]
